--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
     "react-loading-overlay": "^1.0.1",
+    "react-paystack": "^3.0.5",
     "react-redux": "^7.2.6",
     "react-redux-toastr": "^7.6.6",
     "react-router-dom": "^5.0.1",
