--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "axios": "^0.24.0",
     "moment": "^2.29.1",
     "mui-datatables": "^3.7.8",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^7.20.5",
     "react-loading-overlay": "^1.0.1",
-    "react-paystack": "^3.0.5",
     "react-redux": "^7.2.6",
     "react-redux-toastr": "^7.6.6",
-    "react-router-dom": "^5.0.1",
+    "react-router":"^5.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
