--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "blob-util": "^2.0.2",
     "moment": "^2.29.1",
     "mui-datatables": "^3.7.8",
     "react": "^17.0.1",
@@ -23,7 +24,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-redux": "^7.2.6",
     "react-redux-toastr": "^7.6.6",
-    "react-router":"^5.0.1",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
